--- a/src/templates/components/sections/_home.pug
+++ b/src/templates/components/sections/_home.pug
@@ -3,7 +3,7 @@
 
 section(id="home" class="section home-wrapper header-wrapper-js")
     .container
-        .row.no-gutters.align-items-center.justify-content-center.home-row
+        .row.align-items-center.justify-content-center.home-row
             header.home-header
                 h2.heading.heading-1.text-center.color-white.home-header-title= data.mainWrapper.homeWrapper.h2
                 .heading-separator
