--- a/src/templates/layout/_footer.pug
+++ b/src/templates/layout/_footer.pug
@@ -5,7 +5,7 @@ footer.main-footer
     .container
         .row
             .col-12.col-md-4
-                h3.heading.heading-5.white.text-center= data.mainFooter.recommendedProjects.h3
+                h3.heading.heading-5.main-footer-col-title.text-center= data.mainFooter.recommendedProjects.h3
                 .heading-separator
                     .heading-separator__line.heading-separator__line-reduced-2.heading-separator__line-bolded-3.accent
                 ul.main-footer__list
@@ -20,7 +20,7 @@ footer.main-footer
                     li
                         a(href="#" class="main-footer__link") Lorem ipsum ...
             .col-12.col-md-4
-                h3.heading.heading-5.white.text-center= data.mainFooter.recentChanges.h3
+                h3.heading.heading-5.main-footer-col-title.text-center= data.mainFooter.recentChanges.h3
                 .heading-separator
                     .heading-separator__line.heading-separator__line-reduced-2.heading-separator__line-bolded-3.accent
                 ul.main-footer__list
@@ -35,10 +35,10 @@ footer.main-footer
                     li
                         a(href="#" class="main-footer__link") Lorem ipsum ...
             .col-12.col-md-4.row.no-gutters.flex-column
-                h3.heading.heading-5.white.text-center= data.mainFooter.findMe.h3
+                h3.heading.heading-5.main-footer-col-title.text-center= data.mainFooter.findMe.h3
                 .heading-separator
                     .heading-separator__line.heading-separator__line-reduced-2.heading-separator__line-bolded-3.accent
-                .row.align-content-center.align-items-center.justify-content-center.main-footer__findme-body
+                .row.align-content-center.align-items-center.justify-content-center.main-footer-findme-body
                     a(href="http://codepen.io/mateuszarchicinski" target="_blank" aria-label=data.mainFooter.findMe.body.codepenAriaLabel class="btn btn-square to-top btn-codepen color-white")
                         span(aria-hidden="true" class="icon icon-codepen")
                     a(href="https://www.facebook.com/mateusz.archicinski" target="_blank" aria-label=data.mainFooter.findMe.body.facebookAriaLabel class="btn btn-square to-top btn-facebook color-white")
@@ -52,5 +52,5 @@ footer.main-footer
                     a(href="https://twitter.com/marchicinski" target="_blank" aria-label=data.mainFooter.findMe.body.twitterAriaLabel class="btn btn-square to-top btn-twitter color-white")
                         span(aria-hidden="true" class="icon icon-twitter")
             .col-12
-                p.main-footer__copyright
+                p.main-footer-copyright
                     small &#169; #{data.mainFooter.copyright}
