--- a/src/sass/components/_about-me.scss
+++ b/src/sass/components/_about-me.scss
@@ -55,6 +55,8 @@ $about-me-list-titled__after__border: 40px solid $accent-color-light !default;
         list-style: none;
         @extend %no-padding-margin;
         & > li {
+            overflow-wrap: break-word;
+            word-wrap: break-word;
             padding: 1.5em 0;
             &:first-child {
                 padding-top: 0.75em;
