--- a/src/sass/components/_contact.scss
+++ b/src/sass/components/_contact.scss
@@ -82,6 +82,7 @@ $contact-info__list__li__border-bottom: 1px solid $divider-color !default;
         }
         &__button {
             width: 270px;
+            line-height: 52px;
             background-color: transparent;
             display: block;
             border-width: 2px;
