--- a/src/sass/components/_site-logo.scss
+++ b/src/sass/components/_site-logo.scss
@@ -8,7 +8,7 @@ $site-logo__wrapper__line-height: $site-nav__main-header__height !default;
 
 
 .site-logo {
-    &__wrapper {
+    &-wrapper {
         line-height: $site-logo__wrapper__line-height;
     }
     &__img {
