--- a/src/templates/components/sections/_home.pug
+++ b/src/templates/components/sections/_home.pug
@@ -1,7 +1,7 @@
 //-
     Home Wrapper
 
-section(id="home" class="section home-wrapper header-wrapper-js")
+section(id="home" class="section home-wrapper")
     .container
         .row.align-items-center.justify-content-center.home-row
             header.home-header
