--- a/src/templates/layout/_footer.pug
+++ b/src/templates/layout/_footer.pug
@@ -39,17 +39,17 @@ footer.main-footer
                 .heading-separator
                     .heading-separator__line.heading-separator__line-reduced-2.heading-separator__line-bolded-3.accent
                 .row.align-content-center.align-items-center.justify-content-center.main-footer-findme-body
-                    a(href="http://codepen.io/mateuszarchicinski" target="_blank" aria-label=data.mainFooter.findMe.body.codepenAriaLabel class="btn btn-square to-top btn-codepen color-white")
+                    a(href="http://codepen.io/mateuszarchicinski" target="_blank" aria-label=data.mainFooter.findMe.body.codepenAriaLabel class="btn btn-square btn-square-48 to-top btn-codepen color-white")
                         span(aria-hidden="true" class="icon icon-codepen")
-                    a(href="https://www.facebook.com/mateusz.archicinski" target="_blank" aria-label=data.mainFooter.findMe.body.facebookAriaLabel class="btn btn-square to-top btn-facebook color-white")
+                    a(href="https://www.facebook.com/mateusz.archicinski" target="_blank" aria-label=data.mainFooter.findMe.body.facebookAriaLabel class="btn btn-square btn-square-48 to-top btn-facebook color-white")
                         span(aria-hidden="true" class="icon icon-facebook")
-                    a(href="https://github.com/mateuszarchicinski" target="_blank" aria-label=data.mainFooter.findMe.body.githubAriaLabel class="btn btn-square to-top btn-github color-white")
+                    a(href="https://github.com/mateuszarchicinski" target="_blank" aria-label=data.mainFooter.findMe.body.githubAriaLabel class="btn btn-square btn-square-48 to-top btn-github color-white")
                         span(aria-hidden="true" class="icon icon-github")
-                    a(href="https://plus.google.com/111077912668591105452" target="_blank" aria-label=data.mainFooter.findMe.body.gplusAriaLabel class="btn btn-square to-top btn-gplus color-white")
+                    a(href="https://plus.google.com/111077912668591105452" target="_blank" aria-label=data.mainFooter.findMe.body.gplusAriaLabel class="btn btn-square btn-square-48 to-top btn-gplus color-white")
                         span(aria-hidden="true" class="icon icon-gplus")
-                    a(href="https://pl.linkedin.com/in/mateuszarchicinski" target="_blank" aria-label=data.mainFooter.findMe.body.linkedinAriaLabel class="btn btn-square to-top btn-linkedin color-white")
+                    a(href="https://pl.linkedin.com/in/mateuszarchicinski" target="_blank" aria-label=data.mainFooter.findMe.body.linkedinAriaLabel class="btn btn-square btn-square-48 to-top btn-linkedin color-white")
                         span(aria-hidden="true" class="icon icon-linkedin")
-                    a(href="https://twitter.com/marchicinski" target="_blank" aria-label=data.mainFooter.findMe.body.twitterAriaLabel class="btn btn-square to-top btn-twitter color-white")
+                    a(href="https://twitter.com/marchicinski" target="_blank" aria-label=data.mainFooter.findMe.body.twitterAriaLabel class="btn btn-square btn-square-48 to-top btn-twitter color-white")
                         span(aria-hidden="true" class="icon icon-twitter")
             .col-12
                 p.main-footer-copyright
