--- a/src/templates/layout/_header.pug
+++ b/src/templates/layout/_header.pug
@@ -1,10 +1,10 @@
 //-
     Main Header
 
-header.main-header.main-header-js
+header.main-header.main-header-embedded.main-header-js
     .container
         .row.no-gutters.align-items-center.justify-content-between
-            a(href="/" class="site-logo__wrapper")
+            a(href="/" class="site-logo-wrapper")
                 img(src="images/logo/logo.png" alt=data.mainHeader.siteLogo.alt width="94" height="28" class="site-logo__img")
             h1.text-hidden= data.mainHeader.h1
             button(aria-label="Side navigation toggle button" class="side-nav__button-toggle side-nav-toggle-js")
