--- a/src/templates/layout/_wrapper.pug
+++ b/src/templates/layout/_wrapper.pug
@@ -1,7 +1,7 @@
 //-
     Main Wrapper
 
-main.main-wrapper
+main.main-wrapper.main-wrapper-js
     include ../components/sections/_home
     include ../components/sections/_about-me
     include ../components/sections/_services
