--- a/src/sass/components/buttons/_buttons.scss
+++ b/src/sass/components/buttons/_buttons.scss
@@ -34,10 +34,15 @@ $btn-twitter__color: $color__twitter !default;
 
 
 .btn {
+    min-width: 88px;
     height: 54px;
+    line-height: 54px;
     background-color: $btn__background-color;
     display: inline-block;
     z-index: 0;
+    transform: perspective(1px) translateZ(0);
+    backface-visibility: hidden;
+    vertical-align: middle;
     font-family: $btn__font-family;
     font-size: $btn__font-size;
     font-weight: $btn__font-weight;
@@ -46,18 +51,23 @@ $btn-twitter__color: $color__twitter !default;
     text-transform: uppercase;
     color: inherit;
     cursor: pointer;
-    padding: 16.5px 20px;
+    padding: 0 20px;
     border: $btn__border;
     outline: 0;
+    margin: 6px 8px;
     transition: 0.15s color ease-in-out;
     
     &-square,
     &-round {
+        min-width: 54px;
         width: 54px;
-        display: inline-flex;
-        align-items: center;
-        justify-content: center;
         padding: 0;
+        &-48 {
+            min-width: 48px;
+            width: 48px;
+            height: 48px;
+            line-height: 48px;
+        }
     }
     &-round {
         border-radius: 50%;
@@ -66,7 +76,7 @@ $btn-twitter__color: $color__twitter !default;
     &,
     &.to-left {
         &::after {
-            left: 101%;
+            left: 100%;
             top: 0;
         }
         &:hover {
@@ -77,7 +87,7 @@ $btn-twitter__color: $color__twitter !default;
     }
     &.to-right {
         &::after {
-            left: -101%;
+            left: -100%;
         }
         &:hover {
             &::after {
@@ -87,7 +97,7 @@ $btn-twitter__color: $color__twitter !default;
     }
     &.to-top {
         &::after {
-            top: 101%;
+            top: 100%;
         }
         &:hover {
             &::after {
@@ -97,7 +107,7 @@ $btn-twitter__color: $color__twitter !default;
     }
     &.to-bottom {
         &::after {
-            top: -101%;
+            top: -100%;
         }
         &:hover {
             &::after {
@@ -112,12 +122,13 @@ $btn-twitter__color: $color__twitter !default;
         }
     }
     &::after {
-        content: "";
-        width: 102%;
-        height: 102%;
+        content: '';
+        width: 100%;
+        height: 100%;
         position: absolute;
         display: block;
         z-index: -1;
+        backface-visibility: hidden;
         transition: 0.2s transform ease-in-out, 0.3s background-color ease-in-out;
     }
     &:hover {
@@ -127,13 +138,11 @@ $btn-twitter__color: $color__twitter !default;
         }
     }
     
-    // To prevent button click animation on IE browser
+    // To prevent button click animation on IE browser & text ellipsis when text is too long
     &,
     & > span {
         position: relative;
-        overflow: hidden;
-        white-space: nowrap;
-        text-overflow: ellipsis;
+        @extend %ellipsis;
     }
     
     &-hover {
@@ -145,35 +154,35 @@ $btn-twitter__color: $color__twitter !default;
     }
     
     // Primary
-    @include colorfulButton("primary", $primary-color);
+    @include colorfulButton('primary', $primary-color);
     
     // Primary Dark
-    @include colorfulButton("primary-dark", $primary-color-dark);
+    @include colorfulButton('primary-dark', $primary-color-dark);
     
     // Primary Light
-    @include colorfulButton("primary-light", $primary-color-light);
+    @include colorfulButton('primary-light', $primary-color-light);
     
     // Primary Text
-    @include colorfulButton("primary-text", $primary-text-color);
+    @include colorfulButton('primary-text', $primary-text-color);
     
     // Accent
-    @include colorfulButton("accent", $accent-color);
+    @include colorfulButton('accent', $accent-color);
     
     // Codepen
-    @include colorfulButton("codepen", $btn-codepen__color);
+    @include colorfulButton('codepen', $btn-codepen__color);
     
     // Facebook
-    @include colorfulButton("facebook", $btn-facebook__color);
+    @include colorfulButton('facebook', $btn-facebook__color);
     
     // Github
-    @include colorfulButton("github", $btn-github__color);
+    @include colorfulButton('github', $btn-github__color);
     
     // Gplus
-    @include colorfulButton("gplus", $btn-gplus__color);
+    @include colorfulButton('gplus', $btn-gplus__color);
     
     // Linkedin
-    @include colorfulButton("linkedin", $btn-linkedin__color);
+    @include colorfulButton('linkedin', $btn-linkedin__color);
     
     // Twitter
-    @include colorfulButton("twitter", $btn-twitter__color);
+    @include colorfulButton('twitter', $btn-twitter__color);
 }
